# meta-feeder-book

./: Cargo.toml  README.md
.github/workflows/: publish.yml
feeder-plugin/book-feeder/: Cargo.toml  Dockerfile
feeder-plugin/book-feeder/src/: gutenberg.rs  lib.rs  main.rs
feeder-plugin/book-feeder/tests/: contract.rs
